--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             height: 100vh;
             overflow: hidden;
         }
-        .hero-section video {
+        .hero-section img {
             position: absolute;
             top: 50%;
             left: 50%;
