--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             text-align: center;
         }
 
-img {
+.myimg {
   display: none;
   width: 40px;
   z-index: -1;
@@ -99,7 +99,9 @@ img {
 <body>
     <img class="red myimg" src="http://www.clker.com/cliparts/0/f/1/f/130267960774173786paint-splash(red)-md.png" alt="image not supported">
 
+    <img class="blue myimg" src="http://www.clker.com/cliparts/Q/3/H/u/Z/K/dark-blue-splash-ink-hi.png" alt="image not supported">
 
+    <img class="yellow myimg" src="http://www.clker.com/cliparts/3/y/m/m/p/P/yellow-splash-ink-md.png" alt="image not supported">
 
     <!-- Header flotante -->
     <nav class="navbar navbar-expand-lg fixed-top">
@@ -117,7 +119,6 @@ img {
             </div>
         </div>
     </nav>
-    <img class="blue myimg" src="http://www.clker.com/cliparts/Q/3/H/u/Z/K/dark-blue-splash-ink-hi.png" alt="image not supported">
 
     <!-- Sección de video de fondo -->
     <section class="hero-section">
@@ -167,7 +168,6 @@ img {
             </div>
         </div>
     </section>
-    <img class="yellow myimg" src="http://www.clker.com/cliparts/3/y/m/m/p/P/yellow-splash-ink-md.png" alt="image not supported">
 
     <!-- Sección de Reseñas -->
     <section id="reseñas" class="section bg-light">
