--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
             // Enviar los datos mediante AJAX
             $.ajax({
-                url: 'https://tu_dominio.com/wp-json/cmr-pinturas/v1/enviar-formulario/', // Reemplaza con tu URL
+                url: 'https://noticiasaldia.es/wp-json/cmr-pinturas/v1/enviar-formulario/', // Reemplaza con tu URL
                 method: 'POST',
                 data: formData,
                 success: function(response) {
