--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h2 class="section-title">¿Qué Ofrecemos?</h2>
             <div class="row">
                 <!-- Servicio 1 -->
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-bottom: 20px;">
                     <div class="card service-card">
                         <img src="servicio1.jpg" class="card-img-top" alt="Servicio 1">
                         <div class="card-body">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <!-- Servicio 2 -->
-                <div class="col-md-4">
+                <div class="col-md-4" style="margin-bottom: 20px;">
                     <div class="card service-card">
                         <img src="servicio2.jpg" class="card-img-top" alt="Servicio 2">
                         <div class="card-body">
