--- a/index.html
+++ b/index.html
@@ -85,6 +85,65 @@
             padding: 20px 0;
             text-align: center;
         }
+        #simple_gallery {
+  width: 100%;
+  max-width: 1100px;
+  margin: 80px auto 0;
+  padding: 0;
+}
+#simple_gallery ul {
+  display: block;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#simple_gallery ul li {
+  display: block;
+  float: left;
+  width: calc(33.33% - 20px);
+  margin: 0;
+  padding: 10px;
+}
+#simple_gallery ul li img {
+  width: 100%;
+  display: block;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: .5s;
+  filter: grayscale(100%);
+}
+#simple_gallery ul li img:hover {
+  filter: grayscale(0);
+}
+#overflow {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(51, 51, 51, 0.7);
+    top: 0;
+    left: 0;
+    margin: 0;
+    z-index: 10;
+    display: none;
+}
+
+#overflow img {
+    width: 80%;
+    margin: auto;
+    display: block;
+    margin-top: 5%;
+    max-width: 1100px;
+}
+#overflow .fa {
+    float: right;
+    font-size: 40px;
+    color: #fff;
+    margin: 30px 30px 0 0;
+    cursor: pointer;
+}
+.clear {
+  clear:both;
+}
     </style>
 </head>
 <body>
@@ -236,6 +295,25 @@
             </div>
         </div>
     </section>
+    <section id="galeria" class="section">
+
+    <div id="simple_gallery">
+  <h1>Simple jQuery Gallery</h1>
+  <ul>
+    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
+    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
+    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
+    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
+    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
+    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
+  </ul>
+  <div class="clear"></div>
+</div>
+<div id="overflow">
+  <i id="close" class="fa fa-window-close"></i>
+  <img src="">
+</div>
+</section>
 
     <!-- Sección de Preguntas Frecuentes -->
     <section id="faq" class="section bg-light">
@@ -340,6 +418,17 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Script para cambiar el fondo del navbar al hacer scroll -->
     <script>
+        jQuery(document).ready(function() { 
+    $("#simple_gallery ul li img").click(function(){
+        var url = $(this).attr("src");
+        $("#overflow img").attr("src", url);
+        $("#overflow").show();
+    });
+    //Close overlay
+    $("#overflow, #overflow img, #close").click(function() {
+        $("#overflow").hide();
+    });
+});
         $(document).ready(function() {
         // Manejar el envío del formulario
         $('#contactForm').on('submit', function(event) {
