--- a/index.html
+++ b/index.html
@@ -298,14 +298,14 @@
     <section id="galeria" class="section">
 
     <div id="simple_gallery">
-  <h1>Simple jQuery Gallery</h1>
+  <h1>Galería CMR Pinturas</h1>
   <ul>
-    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
-    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
-    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
-    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
-    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
-    <li><img src="https://lab.oliveiraweb.com.br/images-for-samples/owl.jpg" /></li>
+    <li><img src="./CMRPinturas-1.PNG" /></li>
+    <li><img src="./CMRPinturas-2.PNG" /></li>
+    <li><img src="./CMRPinturas-3.PNG" /></li>
+    <li><img src="./CMRPinturas-4.PNG" /></li>
+    <li><img src="./CMRPinturas-5.PNG" /></li>
+    <li><img src="./CMRPinturas-6.PNG" /></li>
   </ul>
   <div class="clear"></div>
 </div>
