--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     <section id="galeria" class="section">
 
     <div id="simple_gallery">
-  <h1>Galería CMR Pinturas</h1>
+        <h2 class="section-title">Galería CMR Pinturas</h2>
   <ul>
     <li><img src="./CMRPinturas-1.PNG" /></li>
     <li><img src="./CMRPinturas-2.PNG" /></li>
