--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	width: 98vw;
 }
 #contenedor figure { 
-	background-image: url(https://cdn.josetxu.com/img/before-after-effect-01.jpg);
+	background-image: url(CMRPinturas-4-despues.PNG);
 	background-size: cover;
 	font-size: 0;
 	height: 100%;
@@ -105,7 +105,7 @@
 }
 
 #separador {
-	background-image: url(https://cdn.josetxu.com/img/before-after-effect-02.jpg);
+	background-image: url(CMRPinturas-4-antes.PNG);
 	background-size: cover;
 	bottom: 0;
 	border-right: 5px solid rgba(255,255,255,0.7);
