--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ input#deslizador::-ms-tooltip {
                     <div class="card service-card">
                         <img src="servicio1.jpg" class="card-img-top" alt="Servicio 1">
                         <div class="card-body">
-                            <h5 class="card-title">Pintura Interior</h5>
+                            <h5 class="card-title">Pintura Interior y Exterior</h5>
                             <p class="card-text">Renueva el interior de tu hogar con colores vibrantes y acabados perfectos.</p>
                         </div>
                     </div>
@@ -259,7 +259,7 @@ input#deslizador::-ms-tooltip {
                     <div class="card service-card">
                         <img src="servicio2.jpg" class="card-img-top" alt="Servicio 2">
                         <div class="card-body">
-                            <h5 class="card-title">Pintura Exterior</h5>
+                            <h5 class="card-title">Limpieza e impermeabilización con malla + Caucho fibrado</h5>
                             <p class="card-text">Protege y embellece el exterior de tu casa con pinturas de alta calidad.</p>
                         </div>
                     </div>
@@ -269,7 +269,7 @@ input#deslizador::-ms-tooltip {
                     <div class="card service-card">
                         <img src="servicio3.jpg" class="card-img-top" alt="Servicio 3">
                         <div class="card-body">
-                            <h5 class="card-title">Decoración</h5>
+                            <h5 class="card-title">Pintura con revestimiento pétreo</h5>
                             <p class="card-text">Añade estilo y personalidad con técnicas decorativas profesionales.</p>
                         </div>
                     </div>
