--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             text-align: center;
         }
         #contenedor { 
-  background:url(https://cdn.josetxu.com/img/before-after-effect-bg.jpg) no-repeat center center; /*fondo*/
+  background:url() no-repeat center center; /*fondo*/
 	height: 73.5vw;
 	margin: 1vw auto;
 	max-height: 750px;
@@ -234,7 +234,7 @@ input#deslizador::-ms-tooltip {
         <img src="banner2.jpg">
         <div class="hero-content">
             <h1>Transforma tu Hogar con Nuestros Expertos</h1>
-            <p>Servicios de pintura y decoración profesional</p>
+            <p>PINTURAS Y REHABILITACIONES CMR</p>
             <a href="#servicios" class="btn btn-primary">Ver Servicios</a>
         </div>
     </section>
@@ -278,9 +278,9 @@ input#deslizador::-ms-tooltip {
         </div>
     </section>
     <section id="antes-despues" class="section bg-light">
-        <div id="contenedor">
-            <h2 class="section-title">Transformaciones que hablan por sí solas</h2>
+        <h2 class="section-title">Transformaciones que hablan por sí solas</h2>
             <p>Descubre el antes y el después de nuestros trabajos. Cada proyecto es una muestra de nuestra dedicación y pasión por el detalle.</p>
+        <div id="contenedor">
             <figure>
                 <div id="separador"></div>
             </figure>
