--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ input#deslizador::-ms-tooltip {
                         <img src="servicio1.jpg" class="card-img-top" alt="Servicio 1">
                         <div class="card-body">
                             <h5 class="card-title">Pintura Interior y Exterior</h5>
-                            <p class="card-text">Renueva el interior de tu hogar con colores vibrantes y acabados perfectos.</p>
+                            <p class="card-text">Renueva el interior o exterior de tu hogar con colores vibrantes y acabados perfectos siempre con los mejores materiales .</p>
                         </div>
                     </div>
                 </div>
