--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ input#deslizador::-ms-tooltip {
                         <img src="servicio3.jpg" class="card-img-top" alt="Servicio 3">
                         <div class="card-body">
                             <h5 class="card-title">Pintura con revestimiento pétreo</h5>
-                            <p class="card-text">Añade estilo y personalidad con técnicas decorativas profesionales.</p>
+                            <p class="card-text">Añade estilo y personalidad con técnicas decorativas profesionales y acabados con garantía.</p>
                         </div>
                     </div>
                 </div>
