--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	height: 73.5vw;
 	margin: 1vw auto;
 	max-height: 750px;
-	max-width: 1000px;
+	max-width: 90%;
 	overflow: hidden;
 	width: 98vw;
 }
@@ -278,8 +278,8 @@ input#deslizador::-ms-tooltip {
         </div>
     </section>
     <section id="antes-despues" class="section bg-light">
-        <h2 class="section-title">Transformaciones que hablan por sí solas</h2>
-            <p>Descubre el antes y el después de nuestros trabajos. Cada proyecto es una muestra de nuestra dedicación y pasión por el detalle.</p>
+       <div style="width: 100%; padding: 20px; margin: auto; text-align: center;" ><h2 class="section-title">Transformaciones que hablan por sí solas</h2>
+        <p>Descubre el antes y el después de nuestros trabajos. Cada proyecto es una muestra de nuestra dedicación y pasión por el detalle.</p></div>
         <div id="contenedor">
             <figure>
                 <div id="separador"></div>
