--- a/index.html
+++ b/index.html
@@ -365,9 +365,13 @@ input#deslizador::-ms-tooltip {
                     </div>
                 </div>
             </div>
-            <div class="text-center">
-                <a href="#contacto" class="btn btn-primary">Reservar</a>
-                <a href="tel:+123456789" class="btn btn-secondary">Llámame</a>
+            <div class="text-center my-4">
+                <a href="#contacto" class="btn btn-primary btn-lg mx-2">
+                    <i class="fas fa-calendar-check mr-2"></i> Reservar
+                </a>
+                <a href="tel:+600823259" class="btn btn-success btn-lg mx-2">
+                    <i class="fas fa-phone mr-2"></i> Llámame
+                </a>
             </div>
         </div>
     </section>
