--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ input#deslizador::-ms-tooltip {
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 CMR Pinturas. Todos los derechos reservados.</p>
+        <p>&copy; 2024 CMR Pinturas. PINTURAS Y REHABILITACIONES CMR - Todos los derechos reservados.</p>
     </footer>
 
     <!-- Scripts de JavaScript -->
