--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ input#deslizador::-ms-tooltip {
 
 /*flechas*/
 #separador::before {
-	background: url(https://cdn.josetxu.com/img/before-after-effect-arrows.png) no-repeat scroll 0 center transparent;
+	background: url(repeat_arrow_icon.png) no-repeat scroll 0 center transparent;
 	background-size:contain;
 	content: " ";
 	float: right;
