--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@ input#deslizador::-ms-tooltip {
 #separador::before {
 	background: url(repeat_arrow_icon.png) no-repeat scroll 0 center transparent;
 	background-size:contain;
+    background-color: white;
 	content: " ";
 	float: right;
 	height: 100%;
