--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Servicios de Pintura - Tu Empresa de Confianza</title>
+    <title>PINTURAS Y REHABILITACIONES CMR - Tu Empresa de Confianza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlace a Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
