--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ input#deslizador::-ms-tooltip {
     <section class="hero-section">
         <img src="banner2.jpg">
         <div class="hero-content">
-            <h1>Transforma tu Hogar con Nuestros Expertos</h1>
+            <h1>Creatividad en tus Paredes</h1>
             <p>PINTURAS Y REHABILITACIONES CMR</p>
             <a href="#servicios" class="btn btn-primary">Ver Servicios</a>
         </div>
